# CanSat

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  cansat-code.cpp  flash_nuke.uf2
Config/: FreeRTOSConfig.cpp  FreeRTOSConfig.h
lib/: CMakeLists.txt
schematics/: #auto_saved_files#  _autosave-schematics.kicad_sch  fp-info-cache  schematics.kicad_pcb  schematics.kicad_prl  schematics.kicad_pro  schematics.kicad_sch  schematics.kicad_sch-bak  ~schematics.kicad_sch.lck
src/: CMakeLists.txt  adc.h  anemometer.cpp  anemometer.h  bme680.cpp  bme680.h  cansat.cpp  commonTypes.h  config.h  dataHandler.cpp  dataHandler.h  dht20.cpp  dht20.h  exceptionHandlers.h  filesystem.cpp  filesystem.hpp  globals.cpp  globals.h  gps.cpp  gps.h  i2c.h  i2cSensor.h  imu.cpp  imu.h  lightSensor.cpp  lightSensor.h  littlefs.cpp  littlefs.hpp  mpu6050.cpp  mpu6050.h  pins.h  radio.cpp  radio.h  radio.hpp  sensor.h  streamHandler.cpp  streamHandler.h  watchdog.cpp  watchdog.h
src/bme68x/: bme68x.cpp  bme68x.hpp
templates/: dataTransmitTemplate.json
